--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         </section>
     </main>
             <footer>
-                <p><i>&copy; Se aprofundando na historia da Física!</i> </p>
+                <p><i>&copy; Se aprofundando na história da Física!</i> </p>
                 <p><i>&copy;Feito por: Nicole, Ana, Maitê, Mariana e Maria Fernanda.</i></p>
             </footer>
    </body>
